--- a/app/public/style.css
+++ b/app/public/style.css
@@ -9,12 +9,30 @@ body {
     width: 100%;
 }
 
+.eyeHawk{
+    background: none;
+    border: none;
+    display: flex;
+    position: absolute;
+    padding: 10px 10px;
+    width: 100px;
+    height: 100px;
+    top: 30px;
+    left: 20px;
+    background-image:url('iconOjodeHalcon.svg');
+    background-size: 80px 80px;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
 .bienvenida{
     display: flex;
+    position: absolute;
+    top: -60px;
+    left: 15px;
     color: #FFF;
     font-size: 20px;
-    margin-top: 10px;
-    margin-left: auto;
+    margin-top: 60px;
     width: 100%;
 }
 
@@ -57,7 +75,6 @@ h1, h2 {
     text-align: center;
     align-items: center;
     color: #7CF55E;
-    width: 100%;
 }
 
 .fecha {
