--- a/app/public/home.css
+++ b/app/public/home.css
@@ -5,7 +5,64 @@ body
     font-size: 9pt;
     background-color: #333;
     height: 100%;
+    width: 100%;
     margin: 0;
+}
+
+html {
+    width: 100%;
+    height: 100%;
+}
+
+svg {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    margin: 0 auto;
+    width: 100%;
+    z-index: 0;
+}
+
+.mesMobilButton{
+    position: absolute;
+    border-radius: 5px;
+    background-color: #D80B0B;
+    color: #FFF;
+    top: 0;
+    right: .5vw;
+}
+
+.messageMobil {
+    position: absolute;
+    top: 2.5vh;
+}
+
+.imgRotate {
+    position: absolute;
+    margin-top: 0;
+    top: 3vh;
+    width: 30vw;
+    height: 30vh;
+    left: 10vw;
+}
+
+.mesMobil{
+    position: fixed;
+    top: 35vh;
+    left: 25vw;
+    color: #FFF;
+    background-color: #333;
+    font-size: 16px;
+    display: block;
+    justify-content: center;
+    border-radius: 5px;
+    border-color: #FFf;
+    border-width: 20px;
+    z-index: 50;
+    width: 50vw;
+    height: 30vh;
+    display: none;
 }
 
 .ok {
@@ -19,15 +76,7 @@ body
     color: #FFF;
 }
 
-svg {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    margin: 0 auto;
-    width: 100%;
-    z-index: 0;
-}
+
 
 rect {
     transition: fill 0.75s, stroke 1.5s;
@@ -39,6 +88,7 @@ tspan {
 
 text {
     white-space: pre-line;
+    user-select: none;
 }
 
 h4, p {
@@ -53,6 +103,7 @@ h4, p {
     background-color: #626262;
     color: #f0f0f0;
     text-align: justify;
+    /*justify-content: center;*/
     position: fixed;
     border: 1px solid #ccc;
     border-radius: 7px;
@@ -60,16 +111,21 @@ h4, p {
     z-index: 1;
     margin: 0 auto;
     width: 500px;
-    height: 270px;
+    height: 255px;
 }
 
 
 .textclima {
     color: #f0f0f0;
-    margin-top: 1px;
+    margin-top: -12px;
     margin-bottom: 2px;
     text-align: center;
 }
+
+/*.backName{
+    width: 70%;
+    justify-content: center;
+}*/
 
 
 #ventanaFlotante {
@@ -139,8 +195,10 @@ h4, p {
 #myChartClima {
     background-color: #E0E0E0;
     border-radius: 5px;
-    width: auto;
+    /*justify-content: center;*/
+    width: 100%;
     height: auto;
-    margin: 1px 1px 2px;
+    margin: auto;
     display: none;
+
 }
